src/manifests/todos-v1/todos-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todos-db
  labels:
    app: todos-db
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: tcp
  selector:
    app: todos-db
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: todos-mysql
  labels:
    app: todos-mysql
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: todos-mysql
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: todos-webui
  labels:
    app: todos-webui
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
  selector:
    app: todos-webui
    version: 1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-db
  labels:
    app: todos-db
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-db
      version: 1.0.0
  template:
    metadata:
      labels:
        app: todos-db
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-db
          image: registry.redhat.io/rhel8/mysql-80:latest
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 3306
              protocol: TCP
---
# Source: todos-app/templates/todos-mysql/todos-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-mysql
  labels:
    app: todos-mysql
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-mysql
      version: 1.0.0
  template:
    metadata:
      labels:
        app: todos-mysql
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-mysql
          image: quay.io/corbsmartin/todos-mysql:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-webui
  labels:
    app: todos-webui
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-webui
      version: 1.0.0
  template:
    metadata:
      labels:
        app: todos-webui
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-webui
          image: quay.io/corbsmartin/todos-webui:1.0.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: todos-webui
  labels:
    app: todos
    version: 1.0.0
spec:
  host: "todos.apps-crc.testing"
  to:
    kind: Service
    name: todos-webui
    weight: 100
  port:
    targetPort: "http"
  tls:
    termination: "edge"
    insecureEdgeTerminationPolicy: "Redirect"
  wildcardPolicy: "None"
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: todos-mysql
  labels:
    app: todos
    version: 1.0.0
spec:
  host: "todos.apps-crc.testing"
  path: /todos
  to:
    kind: Service
    name: todos-mysql
    weight: 100
  port:
    targetPort: "http"
  tls:
    termination: "edge"
    insecureEdgeTerminationPolicy: "Redirect"
  wildcardPolicy: "None"
